# test-devops

./: .gitignore  README.md
consumer/: .env  Dockerfile  README.md
consumer/src/: pyproject.toml
consumer/src/application/tests/: use_test.py
consumer/src/application/use_cases/: consumer.py
consumer/src/http_api/: exceptions.py  main.py  middlewares.py
consumer/src/http_api/apps/consumer/: routes.py
k8s/mexico/: 01_publisher.yaml
k8s/peru/: 01_consumer.yaml
publisher/: .env  Dockerfile  README.md
publisher/src/: pyproject.toml
publisher/src/application/use_cases/: publisher.py
publisher/src/http_api/: error_handler.py  main.py
publisher/src/http_api/apps/publisher/: routes.py
publisher/src/http_api/conf/: base.py  dev.py  prod.py
