[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["paco ocampo <paco.ocampor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
gunicorn = "^20.0.4"
environs = "^8.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
